--- a/styleindex.css
+++ b/styleindex.css
@@ -39,7 +39,7 @@ header{
     justify-content: center;
     position: relative;
 }
-.l1, .l2, .l4{
+.l1, .l2, .l3, .l4{
     color: #E3562B;
 }
 .l1{
@@ -51,7 +51,7 @@ header{
 }
 .l3{
     font-size: 25px;
-    color: #ECAE7D;
+
     top: 50px;
 }
 .l4{
@@ -103,11 +103,10 @@ header{
     display: flex;
     justify-content: flex-end;
     text-align: right;
-    top: 10px;
+    top: px;
 }
 .azul2{
-    top: 10px;
-    
+    top: 10px;  
 }
 .b4{
     top: 10px;
@@ -206,4 +205,90 @@ a{
     position: relative;
     text-align: right;
     bottom: 20px;
+}
+@media screen and (max-width: 768px) {
+    .l1{
+        font-size: 80px;
+    }
+    .tracolaranja{
+        height: 8px;
+    }
+    .l2{
+        font-size: 40px;
+    }
+    .l3{
+        font-size: 25px;
+    }
+    .retangulu{
+        width: 500px;
+        height: auto;
+        top: 35px;
+    }
+    .l4{
+        font-size: 80px;
+        top: 150px;
+    }
+    .b1{
+        font-size: 75px;
+    }
+    .azul1, .azul2{
+        height: 3px;
+    }
+    .b2, .b3, .b4{
+        font-size: 21px;
+    }
+    .seta1{
+        left: 620px;
+    }
+    .seta2{ 
+        left: -20px;
+        top: 820px;
+    }
+    .seta3{
+        left: 620px;
+        top: 940px;
+    }
+    .qs, .faq, .mapa, .siglas, .calen{
+        height: 150px;
+    }
+    .qst, .faqt, .mapat, .siglast, .calent{
+        font-size: 23px;
+    }
+    .qs{
+        right: 60px;
+    }
+    .qst{
+        left: -70px;
+    }
+    .faq{
+        left: 190px;
+        top: -180px;
+    }
+    .faqt{
+        left: 250px;
+        top: -180px;
+    }
+    .mapa{
+        right: 40px;
+        top: 1180px;
+    }
+    .mapat{
+        right: -80px;
+        top: 1345px;
+    }
+    .calen{
+        left: 200px;
+    }
+    .calent{
+        left: 210px;
+        top: 1620px;
+    }
+    .siglas{
+        left: 450px;
+        top: 1460px;
+    }
+    .siglast{
+        left: 500px;
+        top: 1620px;
+    }
 }
